# rfnoc-ppchan

./: CMakeLists.txt  MANIFEST.md  README.md
cmake/Modules/: ppchanConfig.cmake
docs/: README.ppchan
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: 128chan_simple_test_vec_based.grc
grc/: ppchan_chan128.xml  ppchan_chan256.xml
include/ppchan/: CMakeLists.txt  api.h  chan128.h  chan128_block_ctrl.hpp  chan256.h  chan256_block_ctrl.hpp
lib/: CMakeLists.txt  chan128_block_ctrl_impl.cpp  chan128_impl.cc  chan128_impl.h  chan256_block_ctrl_impl.cpp  chan256_impl.cc  chan256_impl.h  qa_ppchan.cc  qa_ppchan.h  test_ppchan.cc
python/: CMakeLists.txt  __init__.py
rfnoc/: Makefile.inc
rfnoc/blocks/: chan128.xml
rfnoc/dump/ip_full/channelizer_blk_mem_gen_v8_3_i0/: Makefile.inc  channelizer_blk_mem_gen_v8_3_i0.xci  channelizer_blk_mem_gen_v8_3_i0.xml
rfnoc/dump/ip_full/channelizer_c_counter_binary_v12_0_i0/: channelizer_c_counter_binary_v12_0_i0.xci  channelizer_c_counter_binary_v12_0_i0.xml
rfnoc/dump/ip_full/channelizer_c_counter_binary_v12_0_i1/: channelizer_c_counter_binary_v12_0_i1.xci  channelizer_c_counter_binary_v12_0_i1.xml
rfnoc/dump/ip_full/channelizer_c_counter_binary_v12_0_i2/: Makefile.inc  channelizer_c_counter_binary_v12_0_i2.xci  channelizer_c_counter_binary_v12_0_i2.xml
rfnoc/dump/ip_full/channelizer_c_counter_binary_v12_0_i3/: Makefile.inc  channelizer_c_counter_binary_v12_0_i3.xci  channelizer_c_counter_binary_v12_0_i3.xml
rfnoc/dump/ip_full/channelizer_fir_compiler_v7_2_i0/: Makefile.inc  channelizer_fir_compiler_v7_2_i0.xci  channelizer_fir_compiler_v7_2_i0.xml
rfnoc/dump/ip_full/channelizer_xfft_v9_0_i0/: Makefile.inc  channelizer_xfft_v9_0_i0.xml
rfnoc/dump/ip_oldold/channelizer_c_counter_binary_v12_0_i0/: Makefile.inc  (+1 more)
rfnoc/fpga-src/: Makefile.inc  Makefile.srcs  noc_block_chan128.v
rfnoc/fpga-src/hdl_channelizer/: channelizer.v  channelizer_entity_declarations.v  xlclockdriver_rd.v
rfnoc/ip/: Makefile.inc  Makefile_sim.inc
rfnoc/ip/channelizer_c_counter_binary_v12_0_i0/: Makefile.inc  channelizer_c_counter_binary_v12_0_i0.xci
rfnoc/ip/channelizer_c_counter_binary_v12_0_i1/: Makefile.inc  channelizer_c_counter_binary_v12_0_i1.xci  channelizer_c_counter_binary_v12_0_i1.xml
rfnoc/ip/channelizer_fir_compiler_v7_2_i0/: Makefile.inc  channelizer_fir_compiler_v7_2_i0.xci  channelizer_fir_compiler_v7_2_i0.xml
rfnoc/ip/channelizer_xfft_v9_0_i0/: Makefile.inc  channelizer_xfft_v9_0_i0.xci
rfnoc/testbenches/: CMakeLists.txt
rfnoc/testbenches/noc_block_chan128_tb/: Makefile  noc_block_chan128_tb.sv
rfnoc/testbenches/noc_block_fir_tb/: Makefile  noc_block_fir_tb.sv  webtalk.jou  webtalk_31852.backup.jou  webtalk_32228.backup.jou  webtalk_354.backup.jou  webtalk_3728.backup.jou  webtalk_4065.backup.jou
swig/: CMakeLists.txt  ppchan_swig.i
(+940 files in other folders)
